--- a/ElevenNote.WebAPI/appsettings.json
+++ b/ElevenNote.WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ElevenNote;User=sa;Password=PurpleDog.1;"
+    "DefaultConnection": "Server=localhost,1433;TrustServerCertificate=True; Database=ElevenNote;User=sa;Password=PurpleDog.1;"
   }
 }
