--- a/ElevenNote.WebAPI/appsettings.json
+++ b/ElevenNote.WebAPI/appsettings.json
@@ -6,7 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
+  "ConnectionStrings": 
+  {
     "DefaultConnection": "Server=localhost,1433;TrustServerCertificate=True; Database=ElevenNote;User=sa;Password=PurpleDog.1;"
+  },
+  "Jwt": 
+  {
+    "Key": "SecretSecurityGoesHere",
+    "Issuer": "localhostServer",
+    "Audience": "localhostClient"
   }
 }
